[package]
name = "libpnet-custom-packet"
version = "0.1.0"
authors = ["Alexander Polakov <plhk@sdf.org>"]
build = "build.rs"

[dependencies]

[build-dependencies.pnet_macros]
git = "https://github.com/polachok/libpnet"
branch = "le"
features = [ "with-syntex" ]

[dependencies.pnet_macros_support]
git = "https://github.com/polachok/libpnet"
branch = "le"

[dependencies.pnet]
git = "https://github.com/polachok/libpnet"
branch = "le"
features = [ "with-syntex" ]

[build-dependencies.syntex]
version = "0.42"
